# dx_system

./: CODEOWNERS  LICENSE  README.md  aws.yml  install.sh  repository.rosinstall
dx_config/: CMakeLists.txt  package.xml
dx_config/controllers/: left_hand_ros_controllers.yaml  right_hand_ros_controllers.yaml
dx_config/controllers/config/0x02000105/right/: actuator_effort_controller.yaml  actuator_pwm_controller.yaml  finger_npo_controller.yaml  joint_effort_controller.yaml  position_controller.yaml  trajectory_controller.yaml
dx_config/controllers/config/0x02000105/robot_system_0/: actuator_effort_controller.yaml  actuator_pwm_controller.yaml  finger_npo_controller.yaml  joint_effort_controller.yaml  position_controller.yaml  position_effort_controller.yaml  trajectory_controller.yaml
dx_config/controllers/config/ur/right/: force_torque_controller.yaml  trajectory_controller.yaml
dx_config/controllers/config/ur/robot_system_0/: force_torque_controller.yaml  trajectory_controller.yaml
dx_config/debug/: custom_rosconsole.conf
dx_config/diagnostic_analyzers/right/: 0x02000105.yaml
dx_config/diagnostic_analyzers/robot_system_0/: 0x02000105.yaml
dx_config/gazebo/: a0_trajectory_controller.yaml  a1_trajectory_controller.yaml  hand_0_ros_controllers.yaml  hand_1_ros_controllers.yaml  la_trajectory_controller.yaml  left_hand_ros_controllers.yaml  ra_trajectory_controller.yaml  right_hand_ros_controllers.yaml
dx_config/robot/: 0x02000105.yaml
dx_config/robot/right/: 0x02000105.yaml  ur_arm_robot_hw.yaml
dx_config/robot/robot_system_0/: 0x02000105.yaml  ur_arm_robot_hw.yaml
dx_dexee_0_moveit_config/: .setup_assistant  CMakeLists.txt
dx_dexee_0_moveit_config/config/: e3_r3_hand.srdf  fake_controllers.yaml  gazebo_e3_r3_hand.urdf  joint_limits.yaml  stomp_planning.yaml
dx_dexee_0_moveit_config/launch/: chomp_planning_pipeline.launch.xml  fake_moveit_controller_manager.launch.xml  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml
dx_dexee_0_ur_moveit_config/: CMakeLists.txt  package.xml
dx_dexee_0_ur_moveit_config/config/: fake_controllers.yaml  gazebo_ur_dex.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml  ur_dex.srdf
dx_dexee_0_ur_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_control_moveit_controller_manager.launch.xml  ros_controllers.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
dx_launch/: CMakeLists.txt  package.xml  repository.rosinstall
dx_launch/description/: 0x02000105.urdf.xacro  dexee_ur.urdf.xacro  ur.urdf.xacro
dx_launch/launch/: dexee_driver_only.launch  dexee_driver_only.launch.xml  dexee_real.launch.xml  dexee_sim.launch.xml  load_robot_description.launch.xml  start_arm_and_hand_0.launch  start_right_arm_and_hand.launch  ur_arm_driver_only.launch  ur_arm_driver_only.launch.xml  ur_arm_real.launch.xml
dx_launch/launch/controllers/: actuator_effort_controller.launch  actuator_effort_controller.launch.xml  actuator_pwm_controller.launch  actuator_pwm_controller.launch.xml  gazebo_ros_controllers.launch.xml  joint_effort_controller.launch  joint_effort_controller.launch.xml  position_controller.launch  position_controller.launch.xml  position_effort_controller.launch.xml  ros_controllers.launch  trajectory_controller.launch  trajectory_controller.launch.xml
dx_launch/scripts/: construct_robot_description  copy_parameter
dx_msgs/: CMakeLists.txt  package.xml
dx_msgs/msg/: DxActuatorOdometry.msg  DxCommand.msg  DxData.msg  DxEffortControllerState.msg  DxFingerState.msg  DxHandInfo.msg  DxHeader.msg  DxMagTacElement.msg  DxMagTacSensor.msg  DxOneFingerState.msg  DxPositionControllerState.msg  DxPositionEffortControllerState.msg  DxSafeMode.msg  DxState.msg
dx_msgs/srv/: DxCameraReadRegister.srv  DxCameraReset.srv  DxCameraWriteRegister.srv  DxFANBootloadImage.srv  DxGetHandInfo.srv  DxGetSafeMode.srv  DxGetSafeModeState.srv  DxGetSafeModeStoreInfo.srv  DxResetOdometry.srv  DxSetSafeMode.srv
dx_right_dexee_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dx_right_dexee_moveit_config/config/: e3_r3_hand.srdf  fake_controllers.yaml  gazebo_e3_r3_hand.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
dx_right_dexee_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
dx_right_dexee_ur_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dx_right_dexee_ur_moveit_config/config/: fake_controllers.yaml  gazebo_ur_dex.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml  ur_dex.srdf
dx_right_dexee_ur_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
host_scripts/: .bash_aliases  commands.sh  environment.sh  run_persistent.sh  run_stateless.sh  run_utils.sh  setup.sh  start.sh  start_remote.sh
