<?xml version="1.0"?>
<!--
 Copyright (C) 2024-2025 Shadow Robot Company Ltd - All Rights Reserved. Proprietary and Confidential.
 Unauthorized copying of the content in this file, via any medium is strictly prohibited.
-->
<package format="2">
  <name>dx_config</name>
  <version>0.0.0</version>
  <description>The dx_config package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot software team</maintainer>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dx_controllers</build_depend>
  <build_depend>dx_robot</build_depend>
  <build_export_depend>dx_controllers</build_export_depend>
  <build_export_depend>dx_robot</build_export_depend>
  <exec_depend>dx_controllers</exec_depend>
  <exec_depend>dx_robot</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
