<?xml version="1.0"?>
<!--
 Software License Agreement (BSD License)
 Copyright © 2024-2025 belongs to Shadow Robot Company Ltd.
 All rights reserved.
 Redistribution and use in source and binary forms, with or without modification,
 are permitted provided that the following conditions are met:
   1. Redistributions of source code must retain the above copyright notice,
      this list of conditions and the following disclaimer.
   2. Redistributions in binary form must reproduce the above copyright notice,
      this list of conditions and the following disclaimer in the documentation
      and/or other materials provided with the distribution.
   3. Neither the name of Shadow Robot Company Ltd nor the names of its contributors
      may be used to endorse or promote products derived from this software without
      specific prior written permission.
 This software is provided by Shadow Robot Company Ltd "as is" and any express
 or implied warranties, including, but not limited to, the implied warranties of
 merchantability and fitness for a particular purpose are disclaimed. In no event
 shall the copyright holder be liable for any direct, indirect, incidental, special,
 exemplary, or consequential damages (including, but not limited to, procurement of
 substitute goods or services; loss of use, data, or profits; or business interruption)
 however caused and on any theory of liability, whether in contract, strict liability,
 or tort (including negligence or otherwise) arising in any way out of the use of this
 software, even if advised of the possibility of such damage.
-->
<package format="2">
  <name>dx_config</name>
  <version>0.0.0</version>
  <description>The dx_config package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot software team</maintainer>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dx_controllers</build_depend>
  <build_depend>dx_robot</build_depend>
  <build_export_depend>dx_controllers</build_export_depend>
  <build_export_depend>dx_robot</build_export_depend>
  <exec_depend>dx_controllers</exec_depend>
  <exec_depend>dx_robot</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
