<?xml version="1.0"?>
<!--
 Copyright (C) 2024-2025 Shadow Robot Company Ltd - All Rights Reserved. Proprietary and Confidential.
 Unauthorized copying of the content in this file, via any medium is strictly prohibited.
-->
<package format="2">
  <name>dx_launch</name>
  <version>0.0.0</version>
  <description>The dx_launch package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot software team</maintainer>

  <license>Private</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dx_controllers</build_depend>
  <build_depend>dx_robot</build_depend>
  <build_export_depend>dx_controllers</build_export_depend>
  <build_export_depend>dx_robot</build_export_depend>
  <exec_depend>dx_config</exec_depend>
  <exec_depend>dx_controllers</exec_depend>
  <exec_depend>dx_robot</exec_depend>
  <exec_depend>sr_ur_arm_calibration_loader</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
