<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2024 Shadow Robot Company Ltd - All Rights Reserved. Proprietary and Confidential.
 Unauthorized copying of the content in this file, via any medium is strictly prohibited.
-->
<package>
  <name>dx_msgs</name>
  <version>0.0.1</version>
  <description>The dx_drivers package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot software team</maintainer>
  <author>Daniel Greenwald</author>
  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
